# rinha_leaderboard

./: API_CONSUMPTION_GUIDE.md  Cargo.toml  Dockerfile
.github/workflows/: publish-ghcr.yml
src/: main.rs
